--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "db:migrate:configure": "node ./db/config.js > ./db/database.json",
     "db:migrate": "npm run db:migrate:configure && node ./node_modules/.bin/rethink-migrate -r db",
     "start": "npm run icons:fetch && node server",
+    "workers": "./node_modules/.bin/babel-node ./server/workers",
     "postinstall": "npm run build",
     "test": "./node_modules/.bin/xo && NODE_ENV=test ./node_modules/.bin/ava"
   },
@@ -45,6 +46,7 @@
     "babel-runtime": "^6.6.1",
     "bourbon": "^4.2.6",
     "bourbon-neat": "^1.7.4",
+    "bull": "^1.0.0-rc1",
     "chokidar": "^1.4.3",
     "cookie-parser": "^1.4.1",
     "cors": "^2.7.1",
@@ -64,6 +66,7 @@
     "isomorphic-fetch": "^2.2.1",
     "jsdom": "^8.0.4",
     "json-loader": "^0.5.4",
+    "later": "^1.2.0",
     "node-sass": "^3.4.2",
     "normalize.css": "^3.0.3",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
