--- a/package.json
+++ b/package.json
@@ -66,7 +66,10 @@
     "isomorphic-fetch": "^2.2.1",
     "jsdom": "^8.0.4",
     "json-loader": "^0.5.4",
+    "juration": "0.0.1",
     "later": "^1.2.0",
+    "moment": "^2.12.0",
+    "moment-timezone": "^0.5.3",
     "node-sass": "^3.4.2",
     "normalize.css": "^4.0.0",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
