--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "moment-timezone": "^0.5.3",
     "node-sass": "^3.4.2",
     "normalize.css": "^4.0.0",
+    "normalizr": "^2.0.1",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "postcss": "^5.0.17",
     "postcss-modules-extract-imports": "^1.0.0",
