--- a/package.json
+++ b/package.json
@@ -105,7 +105,8 @@
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
     "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.10.0"
+    "webpack-hot-middleware": "^2.10.0",
+    "yup": "^0.17.1"
   },
   "devDependencies": {
     "ava": "^0.11.0",
