--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "db:drop": "./node_modules/.bin/babel-node ./db/drop.js",
     "db:migrate:configure": "node ./db/config.js > ./db/database.json",
     "db:migrate": "npm run db:migrate:configure && node ./node_modules/.bin/rethink-migrate -r db",
+    "dev:testdata": "./node_modules/.bin/babel-node test/generateTestData",
     "start": "npm run icons:fetch && node server",
     "workers": "./node_modules/.bin/babel-node ./server/workers",
     "postinstall": "npm run build",
