--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "later": "^1.2.0",
     "moment": "^2.12.0",
     "moment-timezone": "^0.5.3",
-    "node-sass": "^3.4.2",
+    "node-sass": "3.4.2",
     "normalize.css": "^4.0.0",
     "normalizr": "^2.0.1",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
@@ -96,7 +96,7 @@
     "redux-thunk": "^1.0.3",
     "resolve-url-loader": "^1.4.3",
     "rethink-migrate": "^1.2.2",
-    "rethinkdb": "^2.2.3",
+    "rethinkdb": "2.2.3",
     "rethinkdbdash": "^2.2.18",
     "sass-loader": "^3.2.0",
     "sass-resources-loader": "^1.0.2",
