--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "start": "npm run icons:fetch && node server",
     "workers": "./node_modules/.bin/babel-node ./server/workers",
     "postinstall": "npm run build",
-    "test": "./node_modules/.bin/xo && NODE_ENV=test ./node_modules/.bin/ava"
+    "test": "./node_modules/.bin/xo && NODE_ENV=test ./node_modules/.bin/ava",
+    "test:watch": "./node_modules/.bin/xo && NODE_ENV=test ./node_modules/.bin/ava --watch"
   },
   "keywords": [
     "game"
