--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "start": "npm run icons:fetch && node server",
     "workers": "./node_modules/.bin/babel-node ./server/workers",
     "postinstall": "npm run build",
-    "test": "./node_modules/.bin/xo && NODE_ENV=test ./node_modules/.bin/ava",
-    "test:watch": "./node_modules/.bin/xo && NODE_ENV=test ./node_modules/.bin/ava --watch"
+    "test": "./node_modules/.bin/xo && NODE_ENV=test ./node_modules/.bin/ava --serial",
+    "test:watch": "./node_modules/.bin/xo && NODE_ENV=test ./node_modules/.bin/ava --serial --watch"
   },
   "keywords": [
     "game"
@@ -37,7 +37,7 @@
   "homepage": "https://github.com/LearnersGuild/game#readme",
   "dependencies": {
     "@learnersguild/idm-jwt-auth": "^0.2.4",
-    "ava": "^0.14.0",
+    "ava": "github:sindresorhus/ava#master",
     "babel-cli": "^6.6.5",
     "babel-core": "^6.7.0",
     "babel-loader": "^6.2.4",
@@ -113,7 +113,7 @@
     "yup": "^0.17.1"
   },
   "devDependencies": {
-    "ava": "^0.11.0",
+    "ava": "github:sindresorhus/ava#master",
     "babel-plugin-react-transform": "^2.0.0-beta1",
     "bluebird": "^3.3.5",
     "eslint": "^2.2.0",
@@ -162,7 +162,7 @@
     "files": [
       "**/__tests__/*-test.js"
     ],
-    "failFast": true,
+    "failFast": false,
     "verbose": true,
     "require": [
       "babel-core/register",
