--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "sass-loader": "^3.2.0",
     "sass-resources-loader": "^1.0.2",
     "serve-static": "^1.10.0",
+    "socketcluster-client": "^4.3.16",
     "socketcluster-server": "^4.1.10",
     "style-loader": "^0.13.0",
     "toolbox-loader": "0.0.3",
