--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "start": "npm run icons:fetch && node server",
     "workers": "./node_modules/.bin/babel-node ./server/workers",
     "postinstall": "npm run build",
-    "test": "./node_modules/.bin/xo && NODE_ENV=test ./node_modules/.bin/ava --serial",
-    "test:watch": "./node_modules/.bin/xo && NODE_ENV=test ./node_modules/.bin/ava --serial --watch"
+    "test": "./node_modules/.bin/xo && NODE_ENV=test ./node_modules/.bin/mocha --serial",
+    "test:watch": "./node_modules/.bin/xo && NODE_ENV=test ./node_modules/.bin/mocha --watch"
   },
   "keywords": [
     "game"
@@ -112,9 +112,10 @@
     "yup": "^0.17.1"
   },
   "devDependencies": {
-    "ava": "^0.14.0",
     "babel-plugin-react-transform": "^2.0.0-beta1",
     "bluebird": "^3.3.5",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
     "eslint": "^2.2.0",
     "eslint-config-xo-react": "^0.3.0",
     "eslint-plugin-no-use-extend-native": "^0.3.7",
@@ -122,6 +123,7 @@
     "factory-girl": "^3.0.1",
     "faker": "^3.1.0",
     "jsdom": "^8.0.2",
+    "mocha": "^2.4.5",
     "react-addons-test-utils": "^0.14.3",
     "react-transform-hmr": "^1.0.1",
     "xo": "^0.12.1"
@@ -156,17 +158,5 @@
     "esnext": true,
     "space": true,
     "semicolon": false
-  },
-  "ava": {
-    "files": [
-      "**/__tests__/*-test.js"
-    ],
-    "failFast": false,
-    "verbose": true,
-    "require": [
-      "babel-core/register",
-      "babel-polyfill",
-      "./config/testConfig"
-    ]
   }
 }
