--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "start": "npm run icons:fetch && node server",
     "workers": "./node_modules/.bin/babel-node ./server/workers",
     "postinstall": "npm run build",
-    "test": "./node_modules/.bin/xo && NODE_ENV=test ./node_modules/.bin/mocha --serial",
-    "test:watch": "./node_modules/.bin/xo && NODE_ENV=test ./node_modules/.bin/mocha --watch"
+    "lint": "./node_modules/.bin/xo",
+    "test:run": "NODE_ENV=test ./node_modules/.bin/mocha ./**/__tests__/*.test.js",
+    "test:watch": "npm run test -- --watch",
+    "test": "npm run lint && npm run test:run"
   },
   "keywords": [
     "game"
