--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "homepage": "https://github.com/LearnersGuild/game#readme",
   "dependencies": {
     "@learnersguild/idm-jwt-auth": "^0.2.4",
+    "animal-id": "0.0.1",
     "babel-cli": "^6.6.5",
     "babel-core": "^6.7.0",
     "babel-loader": "^6.2.4",
