--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
     "faker": "^3.1.0",
     "jsdom": "^8.0.2",
     "mocha": "^2.4.5",
+    "nock": "^8.0.0",
     "react-addons-test-utils": "^0.14.3",
     "react-transform-hmr": "^1.0.1",
     "xo": "^0.12.1"
