--- a/package.json
+++ b/package.json
@@ -100,8 +100,8 @@
     "redux-thunk": "^1.0.3",
     "resolve-url-loader": "^1.4.3",
     "rethink-migrate": "^1.3.1",
-    "rethinkdb": "2.2.3",
-    "rethinkdbdash": "^2.2.18",
+    "rethinkdb": "2.2",
+    "rethinkdbdash": "2.2",
     "sass-loader": "^3.2.0",
     "sass-resources-loader": "^1.0.2",
     "serve-static": "^1.10.0",
