rename the test data scripts since they're not only for development

--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
   "scripts": {
     "build": "mkdir -p dist && webpack --config config/webpack-production-config.js",
     "icons:fetch": "mkdir -p dist && curl -s https://brand.learnersguild.org/icontags > dist/icons-metadata.json",
+    "data:devtesting": "./node_modules/.bin/babel-node test/generateTestData",
+    "data:playtest-chapter": "./node_modules/.bin/babel-node test/generatePlaytestChapter",
+    "data:github-goals": "./node_modules/.bin/babel-node test/generateTestGoals",
     "db:create": "./node_modules/.bin/babel-node ./db/create.js",
     "db:drop": "./node_modules/.bin/babel-node ./db/drop.js",
     "db:migrate:configure": "node ./db/config.js > ./db/database.json",
     "db:migrate": "npm run db:migrate:configure && node ./node_modules/.bin/rethink-migrate -r db",
-    "dev:testdata": "./node_modules/.bin/babel-node test/generateTestData",
-    "dev:playtestchapter": "./node_modules/.bin/babel-node test/generatePlaytestChapter",
-    "dev:testdata:goals": "./node_modules/.bin/babel-node test/generateTestGoals",
     "start": "npm run icons:fetch && node server",
     "workers": "./node_modules/.bin/babel-node ./server/workers",
     "postinstall": "npm run build",
