--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "icons:fetch": "mkdir -p dist && curl -s https://brand.learnersguild.org/icontags > dist/icons-metadata.json",
     "data:devtesting": "./node_modules/.bin/babel-node test/generateTestData",
     "data:playtest-chapter": "./node_modules/.bin/babel-node test/generatePlaytestChapter",
+    "data:playtest": "./node_modules/.bin/babel-node test/generatePlaytestData",
     "data:github-goals": "./node_modules/.bin/babel-node test/generateTestGoals",
     "db:create": "./node_modules/.bin/babel-node ./db/create.js",
     "db:drop": "./node_modules/.bin/babel-node ./db/drop.js",
@@ -75,6 +76,7 @@
     "juration": "0.0.1",
     "later": "^1.2.0",
     "md5": "^2.1.0",
+    "minimist": "^1.2.0",
     "moment": "^2.12.0",
     "moment-timezone": "^0.5.3",
     "node-sass": "3.4.2",
