--- a/package.json
+++ b/package.json
@@ -131,6 +131,7 @@
     "jsdom": "^8.0.2",
     "mocha": "^2.4.5",
     "nock": "^8.0.0",
+    "pre-commit": "^1.1.3",
     "react-addons-test-utils": "^0.14.3",
     "react-transform-hmr": "^1.0.1",
     "xo": "^0.12.1"
