--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "normalize.css": "^4.0.0",
     "normalizr": "^2.0.1",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
+    "parse-link-header": "^0.4.1",
     "postcss": "^5.0.17",
     "postcss-modules-extract-imports": "^1.0.0",
     "postcss-modules-local-by-default": "^1.0.0",
