--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
     "bluebird": "^3.3.5",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
+    "enzyme": "^2.3.0",
     "eslint": "^2.2.0",
     "eslint-config-xo-react": "^0.3.0",
     "eslint-plugin-no-use-extend-native": "^0.3.7",
