--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "webpack": "^1.12.14",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.10.0",
+    "yamljs": "^0.2.7",
     "yup": "^0.17.1"
   },
   "devDependencies": {
