--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "isomorphic-fetch": "^2.2.1",
     "jsdom": "^8.0.4",
     "json-loader": "^0.5.4",
+    "jsonwebtoken": "^7.0.1",
     "juration": "0.0.1",
     "later": "^1.2.0",
     "md5": "^2.1.0",
@@ -137,7 +138,7 @@
     "pre-commit": "^1.1.3",
     "react-addons-test-utils": "^0.14.3",
     "react-transform-hmr": "^1.0.1",
-    "xo": "^0.12.1"
+    "xo": "^0.16.0"
   },
   "engines": {
     "node": "5.6.x",
@@ -149,7 +150,13 @@
       "comma-dangle": [
         0
       ],
+      "no-mixed-operators": [
+        0
+      ],
       "no-negated-condition": [
+        0
+      ],
+      "object-property-newline": [
         0
       ],
       "react/jsx-indent": [
@@ -160,6 +167,7 @@
         2,
         2
       ],
+      "xo/catch-error-name": 0,
       "xo/filename-case": 0,
       "quotes": [
         2,
