--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "lint": "./node_modules/.bin/xo",
     "test:run": "NODE_ENV=test ./node_modules/.bin/mocha $(find . -path './**/__tests__/*.test.js' ! -ipath '*node_modules')",
     "test:watch": "npm run test -- --watch",
-    "test": "npm run lint && npm run test:run"
+    "test": "npm run lint && npm run test:run --"
   },
   "keywords": [
     "game"
