--- a/solano.yml
+++ b/solano.yml
@@ -1,5 +1,12 @@
 ---
 hooks:
+  pre_setup:
+    - source /etc/lsb-release && echo "deb http://download.rethinkdb.com/apt $DISTRIB_CODENAME main" | sudo tee /etc/apt/sources.list.d/rethinkdb.list
+    - wget -qO- http://download.rethinkdb.com/apt/pubkey.gpg | sudo apt-key add -
+    - sudo apt-get update
+    - sudo apt-get install rethinkdb=2.3.1~0precise
+    - sudo cp /etc/rethinkdb/default.conf.sample /etc/rethinkdb/instances.d/instance1.conf
+    - sudo /etc/init.d/rethinkdb restart
   pre: npm install
 nodejs:
   version: '5.10.1'
