--- a/solano.yml
+++ b/solano.yml
@@ -1,6 +1,6 @@
 ---
 hooks:
-  pre_setup:
+  boot:
     - source /etc/lsb-release && echo "deb http://download.rethinkdb.com/apt $DISTRIB_CODENAME main" | sudo tee /etc/apt/sources.list.d/rethinkdb.list
     - wget -qO- http://download.rethinkdb.com/apt/pubkey.gpg | sudo apt-key add -
     - sudo apt-get update
