--- a/solano.yml
+++ b/solano.yml
@@ -12,8 +12,8 @@ nodejs:
   version: '5.10.1'
 tests:
   - npm test
-rethinkdb:
-  version: '2.3'
+# rethinkdb:
+#   version: '2.3'
 
 
 # ruby_version: ruby-1.9.3-p194             # IMPORTANT: set ruby version to use
