--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ before_install:
   - wget -qO- http://download.rethinkdb.com/apt/pubkey.gpg | sudo apt-key add -
   - sudo apt-get update -q
   - sudo apt-get -y --force-yes install rethinkdb=2.3.4~0trusty
+  - sudo cp /etc/rethinkdb/default.conf.sample /etc/rethinkdb/instances.d/instance1.conf
+  - sudo /etc/init.d/rethinkdb restart
 before_script:
   - /etc/init.d/rethinkdb start
   - RETHINKDB_URL=rethinkdb://localhost:28015/game_test npm run db:create
