--- a/db/data/surveys/retrospective.yaml
+++ b/db/data/surveys/retrospective.yaml
@@ -35,7 +35,7 @@ b0bb0f75-fd81-41d8-9c2e-2bb5f5aa51a8:
     Rate your agreement with the following statement:
 
     > {{subject}} supported me in learning my craft.
-  responseType: likert
+  responseType: likert7Agreement
   subjectType: player
   active: true
 60fb5922-6be7-4e76-aaa3-16d574489833:
@@ -43,6 +43,6 @@ b0bb0f75-fd81-41d8-9c2e-2bb5f5aa51a8:
     Rate your agreement with the following statement:
 
     > {{subject}} contributed positively to our team culture.
-  responseType: likert
+  responseType: likert7Agreement
   subjectType: player
   active: true
