--- a/db/data/surveys/retrospective.yaml
+++ b/db/data/surveys/retrospective.yaml
@@ -18,7 +18,7 @@ b0bb0f75-fd81-41d8-9c2e-2bb5f5aa51a8:
   body: |
     Give feedback to your teammate by completing the following sentence:
 
-    > {{subject}}, I want to work with you because...
+    "{{subject}}, I want to work with you because..."
   responseType: text
   subjectType: player
   active: true
@@ -26,7 +26,7 @@ b0bb0f75-fd81-41d8-9c2e-2bb5f5aa51a8:
   body: |
     Give feedback to your teammate by completing the following sentence:
 
-    > {{subject}}, I would want to work with you more if...
+    "{{subject}}, I would want to work with you more if..."
   responseType: text
   subjectType: player
   active: true
@@ -34,7 +34,7 @@ b0bb0f75-fd81-41d8-9c2e-2bb5f5aa51a8:
   body: |
     Rate your agreement with the following statement:
 
-    > {{subject}} supported me in learning my craft.
+    "{{subject}} supported me in learning my craft."
   responseType: likert7Agreement
   subjectType: player
   active: true
@@ -42,7 +42,7 @@ b0bb0f75-fd81-41d8-9c2e-2bb5f5aa51a8:
   body: |
     Rate your agreement with the following statement:
 
-    > {{subject}} contributed positively to our team culture.
+    "{{subject}} contributed positively to our team culture."
   responseType: likert7Agreement
   subjectType: player
   active: true
