--- a/db/data/questions.yaml
+++ b/db/data/questions.yaml
@@ -9,12 +9,14 @@
 # - to add a new survey question, you'll need to generate a new UUID
 # - you should never replace a question completely while keeping the UUID the same
 # - if you don't know what you're doing, ask!
-cacefe2b-9193-41e1-9886-a0dd61fe9159:
+-
+  id: cacefe2b-9193-41e1-9886-a0dd61fe9159
   body: How much did each team member contribute this cycle?
   responseType: relativeContribution
   subjectType: team
   active: true
-b0bb0f75-fd81-41d8-9c2e-2bb5f5aa51a8:
+-
+  id: b0bb0f75-fd81-41d8-9c2e-2bb5f5aa51a8
   body: |
     Give feedback to your teammate by completing the following sentence:
 
@@ -22,7 +24,8 @@ b0bb0f75-fd81-41d8-9c2e-2bb5f5aa51a8:
   responseType: text
   subjectType: player
   active: true
-410cbfa3-c293-4b84-bf04-c6e1883986fb:
+-
+  id: 410cbfa3-c293-4b84-bf04-c6e1883986fb
   body: |
     Give feedback to your teammate by completing the following sentence:
 
@@ -30,7 +33,8 @@ b0bb0f75-fd81-41d8-9c2e-2bb5f5aa51a8:
   responseType: text
   subjectType: player
   active: true
-26ccd2a0-64af-4bf4-ae6b-e87445a2b213:
+-
+  id: 26ccd2a0-64af-4bf4-ae6b-e87445a2b213
   body: |
     Rate your agreement with the following statement:
 
@@ -38,11 +42,24 @@ b0bb0f75-fd81-41d8-9c2e-2bb5f5aa51a8:
   responseType: likert7Agreement
   subjectType: player
   active: true
-60fb5922-6be7-4e76-aaa3-16d574489833:
+-
+  id: 60fb5922-6be7-4e76-aaa3-16d574489833
   body: |
     Rate your agreement with the following statement:
 
     "{{subject}} contributed positively to our team culture."
   responseType: likert7Agreement
   subjectType: player
+  active: true
+-
+  id: 2c335ce5-ed0b-4068-92c8-56666fb7fdad
+  body: How would you rate the quality of this project on a scale of 0-100%?
+  responseType: percentage
+  subjectType: project
+  active: true
+-
+  id: 65cad3c5-e9e9-4284-999b-3a72c481c55e
+  body: What percentage of this project has been completed?
+  responseType: percentage
+  subjectType: project
   active: true
