--- a/db/data/questions.yaml
+++ b/db/data/questions.yaml
@@ -16,20 +16,11 @@
   subjectType: team
   active: true
 -
-  id: b0bb0f75-fd81-41d8-9c2e-2bb5f5aa51a8
+  id: cd350a14-8a70-4593-9801-30cedab3dc75
   body: |
     Give feedback to your teammate by completing the following sentence:
 
-    "{{subject}}, I want to work with you because..."
-  responseType: text
-  subjectType: player
-  active: true
--
-  id: 410cbfa3-c293-4b84-bf04-c6e1883986fb
-  body: |
-    Give feedback to your teammate by completing the following sentence:
-
-    "{{subject}}, I would want to work with you more if..."
+    "{{subject}}, I want to work with you because... and I would want to work with you more if..."
   responseType: text
   subjectType: player
   active: true
