setting up NewRelic APM

--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "minimist": "^1.2.0",
     "moment": "^2.12.0",
     "moment-timezone": "^0.5.3",
+    "newrelic": "^1.28.2",
     "node-sass": "3.4.2",
     "normalize.css": "^4.0.0",
     "normalizr": "^2.0.1",
