--- a/db/data/surveyBlueprints.yaml
+++ b/db/data/surveyBlueprints.yaml
@@ -20,6 +20,8 @@
       questionId: 26ccd2a0-64af-4bf4-ae6b-e87445a2b213
     -
       questionId: 60fb5922-6be7-4e76-aaa3-16d574489833
+    -
+      questionId: 29a4bc7e-631e-409b-a8ed-6d06a9ae39f7
 -
   id: 106c8683-4936-4c9b-b874-a70cfdd8ce20
   descriptor: projectReview
