--- a/db/data/questions.yaml
+++ b/db/data/questions.yaml
@@ -56,7 +56,7 @@
   active: true
 -
   id: 29a4bc7e-631e-409b-a8ed-6d06a9ae39f7
-  body: How much time did you dedicate to this project?
+  body: During this past cycle, how many hours did you dedicate to this project?
   responseType: text
   subjectType: project
   active: true
