--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "workers": "./node_modules/.bin/babel-node ./server/workers",
     "postinstall": "npm run build",
     "lint": "./node_modules/.bin/xo",
+    "test:cov": "npm run test:cov:run && npm run test:cov:send",
+    "test:cov:run": "NODE_ENV=test ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha $(find . -path './**/__tests__/*.test.js' ! -ipath '*node_modules')",
+    "test:cov:send": "./node_modules/.bin/codeclimate-test-reporter < ./coverage/lcov.info",
     "test:run": "NODE_ENV=test ./node_modules/.bin/mocha $(find . -path './**/__tests__/*.test.js' ! -ipath '*node_modules')",
     "test:watch": "npm run test:run -- --watch",
     "test:ci": "npm run db:create && npm run db:migrate:up && npm run test",
@@ -131,6 +134,7 @@
     "bluebird": "^3.3.5",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
+    "codeclimate-test-reporter": "^0.3.3",
     "enzyme": "^2.3.0",
     "eslint": "^2.2.0",
     "eslint-config-xo-react": "^0.3.0",
@@ -138,6 +142,7 @@
     "eslint-plugin-react": "^3.16.1",
     "factory-girl": "^3.0.1",
     "faker": "^3.1.0",
+    "istanbul": "^1.1.0-alpha.1",
     "jsdom": "^8.0.2",
     "mocha": "^2.4.5",
     "nock": "^8.0.0",
