--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "test:cov:send": "./node_modules/.bin/codeclimate-test-reporter < ./coverage/lcov.info",
     "test:run": "NODE_ENV=test ./node_modules/.bin/mocha $(find . -path './**/__tests__/*.test.js' ! -ipath '*node_modules')",
     "test:watch": "npm run test:run -- --watch",
-    "test:ci": "npm run db:create && npm run db:migrate:up && npm run test",
+    "test:ci": "npm run db:create && npm run db:migrate:up && npm run lint && npm run test:cov",
     "test": "npm run lint && npm run test:run --"
   },
   "keywords": [
