attempt to get better coverage information
istanbul works by hooking-in to the `require()` invocations, so it doesn't know whether or not code is covered unless something tries to require (nearly) file. This pseudo-test ensures that almost all of the code in our codebase is `require`d as part of testing.

--- a/package.json
+++ b/package.json
@@ -142,6 +142,7 @@
     "eslint-plugin-react": "^3.16.1",
     "factory-girl": "^3.0.1",
     "faker": "^3.1.0",
+    "glob": "^7.0.5",
     "istanbul": "^1.1.0-alpha.1",
     "jsdom": "^8.0.2",
     "mocha": "^2.4.5",
