--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "postinstall": "npm run build",
     "lint": "./node_modules/.bin/xo",
     "test:cov": "npm run test:cov:run && npm run test:cov:send",
-    "test:cov:run": "NODE_ENV=test ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha $(find . -path './**/__tests__/*.test.js' ! -ipath '*node_modules')",
+    "test:cov:run": "NODE_ENV=test ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha $(find . -path './**/__tests__/*.test.js' ! -ipath '*node_modules*')",
     "test:cov:send": "./node_modules/.bin/codeclimate-test-reporter < ./coverage/lcov.info",
-    "test:run": "NODE_ENV=test ./node_modules/.bin/mocha $(find . -path './**/__tests__/*.test.js' ! -ipath '*node_modules')",
+    "test:run": "NODE_ENV=test ./node_modules/.bin/mocha $(find . -path './**/__tests__/*.test.js' ! -ipath '*node_modules*')",
     "test:watch": "npm run test:run -- --watch",
     "test:ci": "npm run db:create && npm run db:migrate:up && npm run lint && npm run test:cov",
     "test": "npm run lint && npm run test:run --"
