--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "postinstall": "npm run build",
     "lint": "./node_modules/.bin/xo",
     "test:cov": "npm run test:cov:run && npm run test:cov:send",
-    "test:cov:run": "NODE_ENV=test ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha $(find . -path './**/__tests__/*.test.js' ! -ipath '*node_modules*')",
+    "test:cov:run": "./node_modules/.bin/nyc --reporter=lcov npm run test:run",
     "test:cov:send": "./node_modules/.bin/codeclimate-test-reporter < ./coverage/lcov.info",
     "test:run": "NODE_ENV=test ./node_modules/.bin/mocha $(find . -path './**/__tests__/*.test.js' ! -ipath '*node_modules*')",
     "test:watch": "npm run test:run -- --watch",
@@ -142,11 +142,10 @@
     "eslint-plugin-react": "^3.16.1",
     "factory-girl": "^3.0.1",
     "faker": "^3.1.0",
-    "glob": "^7.0.5",
-    "istanbul": "^1.1.0-alpha.1",
     "jsdom": "^8.0.2",
     "mocha": "^2.4.5",
     "nock": "^8.0.0",
+    "nyc": "^7.1.0",
     "pre-commit": "^1.1.3",
     "react-addons-test-utils": "^0.14.3",
     "react-transform-hmr": "^1.0.1",
@@ -190,6 +189,17 @@
     "esnext": true,
     "space": true,
     "semicolon": false
+  },
+  "nyc": {
+    "all": true,
+    "exclude": [
+      "dist/",
+      "tmp/"
+    ],
+    "require": [
+      "babel-core/register",
+      "babel-polyfill"
+    ]
   },
   "precommit": [
     "lint"
