--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
     "babel-runtime": "^6.6.1",
+    "basic-auth": "^1.0.4",
     "bourbon": "^4.2.6",
     "bourbon-neat": "^1.7.4",
     "bull": "^1.0.0-rc1",
@@ -61,6 +62,7 @@
     "cors": "^2.7.1",
     "css-loader": "^0.23.0",
     "css-modules-require-hook": "^3.0.0",
+    "csv-write-stream": "^2.0.0",
     "dotenv": "^2.0.0",
     "eslint-config-xo-react": "^0.5.0",
     "eslint-plugin-react": "^4.1.0",
