--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "db:migrate:up": "npm run db:migrate:configure && ./node_modules/.bin/babel-node ./node_modules/.bin/rethink-migrate -r db up",
     "db:migrate:down": "npm run db:migrate:configure && ./node_modules/.bin/babel-node ./node_modules/.bin/rethink-migrate -r db down",
     "start": "npm run icons:fetch && node server",
+    "stats": "./node_modules/.bin/babel-node scripts/runStats",
     "workers": "./node_modules/.bin/babel-node ./server/workers",
     "postinstall": "npm run build",
     "lint": "./node_modules/.bin/xo",
