--- a/db/data/surveyBlueprints.yaml
+++ b/db/data/surveyBlueprints.yaml
@@ -21,6 +21,8 @@
     -
       questionId: 60fb5922-6be7-4e76-aaa3-16d574489833
     -
+      questionId: 57bc052d-1a7e-4faa-9617-11a93619ff6e
+    -
       questionId: 29a4bc7e-631e-409b-a8ed-6d06a9ae39f7
 -
   id: 106c8683-4936-4c9b-b874-a70cfdd8ce20
