--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "email": "jeffrey@learnersguild.org"
   },
   "scripts": {
-    "build": "npm run symlinks && mkdir -p dist && webpack --config config/webpack-production-config.js",
+    "build": "npm run symlinks && mkdir -p dist && webpack --config config/webpack.js",
     "start": "npm run symlinks && npm run icons:fetch && node server",
     "stats": "npm run symlinks && ./node_modules/.bin/babel-node scripts/runStats",
     "workers": "npm run symlinks && ./node_modules/.bin/babel-node ./server/workers",
@@ -65,6 +65,7 @@
     "bourbon-neat": "^1.7.4",
     "bull": "^1.0.0-rc1",
     "chokidar": "^1.4.3",
+    "config": "^1.21.0",
     "cookie-parser": "^1.4.1",
     "cors": "^2.7.1",
     "css-loader": "^0.23.0",
