add project ZPD retro survey question

--- a/db/data/questions.yaml
+++ b/db/data/questions.yaml
@@ -2,7 +2,7 @@
 ---
 # IMPORTANT:
 # - questions are identified by a universally unique identifier (UUID, version 4)
-# - you can use a tool to generate them safely: https://www.uuidgenerator.net/
+# - you can use a tool to generate them safely: https://www.uuidgenerator.net
 # - they MUST be version 4!
 # - this UUID is on the left-hand side of the colon for each question
 # - when modifying questions, it's important that you don't change the UUID
@@ -69,5 +69,24 @@
   responseType: numeric
   validationOptions:
     min: 0
+  subjectType: project
+  active: true
+-
+  id: 09dff295-c339-4326-8e21-71cf332e0895
+  body: |
+    Based on a challenge scale of 1 to 10 where 7 represents your ZPD, which number best reflects the challenge level you felt while doing this project?
+
+    Use the following values to calibrate:
+
+    1 = Extremely bored
+    4 = Confident and comfortable
+    6 = Stretched but still capable
+    7 = In flow and pushed just beyond capacity
+    8 = Slightly more challenged than is fun
+    10 = Completely overwhelmed
+  responseType: numeric
+  validationOptions:
+    min: 1
+    max: 10
   subjectType: project
   active: true
