--- a/db/data/surveyBlueprints.yaml
+++ b/db/data/surveyBlueprints.yaml
@@ -24,6 +24,8 @@
       questionId: 57bc052d-1a7e-4faa-9617-11a93619ff6e
     -
       questionId: 29a4bc7e-631e-409b-a8ed-6d06a9ae39f7
+    -
+      questionId: 09dff295-c339-4326-8e21-71cf332e0895
 -
   id: 106c8683-4936-4c9b-b874-a70cfdd8ce20
   descriptor: projectReview
