Add three new "health stat" related questions to retro
These are designed to eventually replace the current team play & culture
contrib. questions. For now both will exist.

Addresses #445

--- a/db/data/questions.yaml
+++ b/db/data/questions.yaml
@@ -52,6 +52,33 @@
   subjectType: player
   active: true
 -
+  id: 4b3b9383-b107-4e16-995e-4617d8f9e0f9
+  body: |
+    Rate your agreement with the following statement:
+
+    "Based on {{subject}}'s culture contribution, I want to work with them on future projects."
+  responseType: likert7Agreement
+  subjectType: player
+  active: true
+-
+  id: bb2927c9-a16d-49e9-8c3a-dd308a17315a
+  body: |
+    Rate your agreement with the following statement:
+
+    "Based on {{subject}}'s team play skills, I want to work with them on future projects."
+  responseType: likert7Agreement
+  subjectType: player
+  active: true
+-
+  id: 16d10fb3-463e-4d0a-b621-1557d9cfbeb9
+  body: |
+    Rate your agreement with the following statement:
+
+    "Based on {{subject}}'s technical skills, I want to work with them on future projects"
+  responseType: likert7Agreement
+  subjectType: player
+  active: true
+-
   id: 2c335ce5-ed0b-4068-92c8-56666fb7fdad
   body: How would you rate the quality of this project on a scale of 0-100%?
   responseType: percentage
