--- a/db/data/surveyBlueprints.yaml
+++ b/db/data/surveyBlueprints.yaml
@@ -23,6 +23,12 @@
     -
       questionId: 57bc052d-1a7e-4faa-9617-11a93619ff6e
     -
+      questionId: 4b3b9383-b107-4e16-995e-4617d8f9e0f9
+    -
+      questionId: bb2927c9-a16d-49e9-8c3a-dd308a17315a
+    -
+      questionId: 16d10fb3-463e-4d0a-b621-1557d9cfbeb9
+    -
       questionId: 29a4bc7e-631e-409b-a8ed-6d06a9ae39f7
     -
       questionId: 09dff295-c339-4326-8e21-71cf332e0895
