--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "css-modules-require-hook": "^3.0.0",
     "csv-write-stream": "^2.0.0",
     "dotenv": "^2.0.0",
+    "elo-rank": "^1.0.0",
     "eslint-config-xo-react": "^0.5.0",
     "eslint-plugin-react": "^4.1.0",
     "express": "^4.13.3",
