moving cyclaLaunched handler into it's own worker

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "start": "npm run symlinks && npm run icons:fetch && node server",
     "stats": "npm run symlinks && ./node_modules/.bin/babel-node scripts/runStats",
     "workers": "npm run symlinks && ./node_modules/.bin/babel-node ./server/workers",
+    "workers:cycleLaunched": "npm run symlinks && ./node_modules/.bin/babel-node ./server/workers/cycleLaunched",
     "icons:fetch": "mkdir -p dist && curl -s https://brand.learnersguild.org/icontags > dist/icons-metadata.json",
     "data:playtest": "npm run symlinks && ./node_modules/.bin/babel-node test/generatePlaytestData",
     "data:github-goals": "npm run symlinks && ./node_modules/.bin/babel-node test/generateTestGoals",
