--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "data:github-goals": "npm run symlinks && ./node_modules/.bin/babel-node test/generateTestGoals",
     "data:import:survey-responses": "npm run symlinks && ./node_modules/.bin/babel-node scripts/importSurveyResponses",
     "data:import:survey-questions": "npm run symlinks && ./node_modules/.bin/babel-node scripts/importSurveyQuestions",
+    "import:projects": "npm run symlinks && ./node_modules/.bin/babel-node scripts/importProjects.js",
     "print:stats": "npm run symlinks && ./node_modules/.bin/babel-node scripts/printStats",
     "print:projects": "npm run symlinks && ./node_modules/.bin/babel-node scripts/printProjects",
     "preview:projects": "npm run symlinks && ./node_modules/.bin/babel-node scripts/previewProjects",
