--- a/package.json
+++ b/package.json
@@ -174,6 +174,9 @@
   "xo": {
     "extends": "xo-react",
     "rules": {
+      "no-use-extend-native/no-use-extend-native": [
+        0
+      ],
       "comma-dangle": [
         0
       ],
