--- a/db/data/surveyBlueprints.yaml
+++ b/db/data/surveyBlueprints.yaml
@@ -25,6 +25,14 @@
     -
       questionId: 4b3b9383-b107-4e16-995e-4617d8f9e0f9
     -
+      questionId: e24822fb-351d-44e8-9124-ddc0951dfc6c
+    -
+      questionId: fbec7b49-aec5-4dc0-a29c-38bea860bacc
+    -
+      questionId: 9adcba88-35d6-45c4-8e55-5ebaf1829678
+    -
+      questionId: 35b1e5a7-9305-4752-8b21-cea413ae1bed
+    -
       questionId: bb2927c9-a16d-49e9-8c3a-dd308a17315a
     -
       questionId: 16d10fb3-463e-4d0a-b621-1557d9cfbeb9
