--- a/package.json
+++ b/package.json
@@ -174,6 +174,12 @@
   "xo": {
     "extends": "xo-react",
     "rules": {
+      "no-unused-vars": [
+        2,
+        {
+          "argsIgnorePattern": "_"
+        }
+      ],
       "no-use-extend-native/no-use-extend-native": [
         0
       ],
