--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -12,6 +12,7 @@ engines:
       - php
   eslint:
     enabled: true
+    channel: "eslint-2"
     checks:
       global-require:
         enabled: false
