--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,7 @@ env:
   node: true
   es6: true
 rules: 
- no-unused-vars: 2
- no-undef: 2
+  no-unused-vars: 2
+  no-undef: 2
 parserOptions:
-  sourceType": "module"
+  sourceType: "module"
