--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "db:migrate:up": "npm run symlinks && npm run db:migrate:configure && ./node_modules/.bin/babel-node ./node_modules/.bin/rethink-migrate -r db up",
     "db:migrate:down": "npm run symlinks && npm run db:migrate:configure && ./node_modules/.bin/babel-node ./node_modules/.bin/rethink-migrate -r db down",
     "db:migrate:create": "./node_modules/.bin/rethink-migrate create",
-    "preview:projects": "npm run symlinks && ./node_modules/.bin/babel-node scripts/previewProjects",
     "test": "npm run symlinks && npm run lint && npm run test:run --",
     "test:cov": "npm run test:cov:run && npm run test:cov:send",
     "test:cov:run": "./node_modules/.bin/nyc --reporter=lcov npm run test:run",
@@ -57,6 +56,7 @@
   "dependencies": {
     "@learnersguild/idm-jwt-auth": "^1.0.0",
     "animal-id": "0.0.1",
+    "autoprefixer": "^6.5.1",
     "babel-cli": "^6.6.5",
     "babel-core": "^6.7.0",
     "babel-loader": "^6.2.4",
@@ -89,6 +89,7 @@
     "graphql": "^0.4.18",
     "graphql-custom-types": "^0.3.0",
     "history": "^2.0.0",
+    "immutability-helper": "^2.0.0",
     "isomorphic-fetch": "^2.2.1",
     "jsdom": "^8.0.4",
     "json-loader": "^0.5.4",
@@ -102,28 +103,29 @@
     "moment": "^2.12.0",
     "moment-timezone": "^0.5.3",
     "newrelic": "^1.28.2",
-    "node-sass": "3.4.2",
+    "node-sass": "^3.10.1",
     "normalize.css": "^4.0.0",
     "normalizr": "^2.0.1",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "parse-link-header": "^0.4.1",
     "postcss": "^5.0.17",
+    "postcss-loader": "^1.0.0",
     "postcss-modules-extract-imports": "^1.0.0",
     "postcss-modules-local-by-default": "^1.0.0",
     "postcss-modules-scope": "^1.0.0",
     "postcss-modules-values": "^1.1.1",
     "raven": "^0.10.0",
     "raven-js": "^2.1.1",
-    "react": "^0.14.3",
-    "react-addons-css-transition-group": "^0.14.7",
-    "react-dom": "^0.14.3",
+    "react": "^15.3.2",
+    "react-addons-css-transition-group": "^15.3.2",
+    "react-dom": "^15.3.2",
     "react-redux": "^4.0.5",
-    "react-router": "^2.0.0",
-    "react-router-redux": "^4.0.0",
-    "react-toolbox": "github:learnersguild/react-toolbox#lg-master",
+    "react-router": "^2.8.1",
+    "react-router-redux": "^4.0.6",
+    "react-toolbox": "1.2.2",
     "redux": "^3.0.5",
     "redux-auth-wrapper": "^0.3.0",
-    "redux-form": "^4.2.0",
+    "redux-form": "^5.3.3",
     "redux-thunk": "^1.0.3",
     "resolve-url-loader": "^1.4.3",
     "rethink-migrate": "^1.3.1",
@@ -136,7 +138,6 @@
     "socketcluster-client": "^4.3.16",
     "socketcluster-server": "^4.1.10",
     "style-loader": "^0.13.0",
-    "toolbox-loader": "0.0.3",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
     "webpack-dev-middleware": "^1.6.1",
@@ -152,7 +153,7 @@
     "chai-as-promised": "^5.3.0",
     "codeclimate-test-reporter": "^0.3.3",
     "enzyme": "^2.3.0",
-    "eslint": "^2.2.0",
+    "eslint": "^2.13.1",
     "eslint-config-xo-react": "^0.3.0",
     "eslint-plugin-no-use-extend-native": "^0.3.7",
     "eslint-plugin-react": "^3.16.1",
@@ -163,7 +164,7 @@
     "nock": "^8.0.0",
     "nyc": "^7.1.0",
     "pre-commit": "^1.1.3",
-    "react-addons-test-utils": "^0.14.3",
+    "react-addons-test-utils": "^15.3.2",
     "react-transform-hmr": "^1.0.1",
     "xo": "^0.16.0"
   },
