--- a/db/data/questions.yaml
+++ b/db/data/questions.yaml
@@ -165,6 +165,7 @@
     8 = Slightly more challenged than is fun
     10 = Completely overwhelmed
   responseType: numeric
+  statId: af6445a3-f631-411f-84b3-d6aaea87d6dc
   validationOptions:
     min: 1
     max: 10
