--- a/db/data/stats.yaml
+++ b/db/data/stats.yaml
@@ -44,3 +44,6 @@
 -
   id: 8d93d767-d0a1-48a4-848c-8663b7f997f1
   descriptor: frictionReduction
+-
+  id: af6445a3-f631-411f-84b3-d6aaea87d6dc
+  descriptor: challenge
