--- a/package.json
+++ b/package.json
@@ -134,8 +134,9 @@
     "redux-thunk": "^1.0.3",
     "resolve-url-loader": "^1.4.3",
     "rethink-migrate": "^1.3.1",
-    "rethinkdb": "2.3",
-    "rethinkdbdash": "2.3",
+    "rethinkdb": "2.3.3",
+    "rethinkdb-changefeed-reconnect": "^0.2.0",
+    "rethinkdbdash": "2.3.25",
     "rimraf": "^2.5.4",
     "sass-loader": "^3.2.0",
     "sass-resources-loader": "^1.0.2",
