replace bull-ui (matador) with toureiro for job queue monitoring

--- a/package.json
+++ b/package.json
@@ -74,7 +74,6 @@
     "bourbon": "^4.2.6",
     "bourbon-neat": "^1.7.4",
     "bull": "^1.0.0-rc1",
-    "bull-ui": "^1.2.1",
     "chokidar": "^1.4.3",
     "config": "^1.21.0",
     "cookie-parser": "^1.4.1",
@@ -145,6 +144,7 @@
     "socketcluster-server": "^4.1.10",
     "style-loader": "^0.13.0",
     "thinky": "^2.3.7",
+    "toureiro": "^0.2.12",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
     "webpack-dev-middleware": "^1.6.1",
