--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "start": "npm run symlinks && npm run icons:fetch && node server",
     "stats": "npm run symlinks && ./node_modules/.bin/babel-node scripts/runStats",
     "symlinks": "./node_modules/.bin/babel-node ./scripts/createSymlinks",
+    "symlinks:remove": "./node_modules/.bin/rimraf ./node_modules/src",
     "test": "npm run symlinks && npm run lint && npm run test:run --",
     "test:ci": "npm run db:create && npm run db:migrate:up && npm run lint && npm run test:cov",
     "test:cov": "npm run test:cov:run && npm run test:cov:send",
