change getCycleVotingResults API, fixup pool migrations
* change the getCycleVotingResults API and change the frontend to use it
* combine pool migrations
* add data migration script
* catch errors in addPlayerIdsToPool
* change flag name from isVotingStillOpen -> votingIsStillOpen
* get frontend using the new shape of CycleVotingResults
* removed hard coded projectFormationService from logs

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "data:github-goals": "npm run symlinks && ./node_modules/.bin/babel-node test/generateTestGoals",
     "data:import:survey-questions": "npm run symlinks && ./node_modules/.bin/babel-node scripts/importSurveyQuestions",
     "data:import:survey-responses": "npm run symlinks && ./node_modules/.bin/babel-node scripts/importSurveyResponses",
+    "data:migrateVotesToPools": "npm run symlinks && ./node_modules/.bin/babel-node scripts/migrateVotesToPools",
     "data:playtest": "npm run symlinks && ./node_modules/.bin/babel-node test/generatePlaytestData",
     "data:reloadFromFiles": "npm run symlinks && ./node_modules/.bin/babel-node scripts/reloadDataFiles",
     "db:create": "npm run symlinks && ./node_modules/.bin/babel-node scripts/dbCreate.js",
