--- a/db/data/surveyBlueprints.yaml
+++ b/db/data/surveyBlueprints.yaml
@@ -23,6 +23,20 @@
     -
       questionId: 57bc052d-1a7e-4faa-9617-11a93619ff6e
     -
+      questionId: 49560aa4-9702-414d-a24f-aee0c6a0da51
+    -
+      questionId: db613a80-c573-4fe9-80d4-ddcf94624d8a
+    -
+      questionId: 0f063fa9-2a44-4254-ba0b-198db409157b
+    -
+      questionId: 90d8dbf6-83da-44ea-a118-248019b00478
+    -
+      questionId: 61b1e890-a8f8-444e-8b08-d6fcb9977bc3
+    -
+      questionId: afe46b1a-d5a2-4602-a991-edb901a42490
+    -
+      questionId: 974c7854-2e95-4de0-9ec2-5fa4c6a3e364
+    -
       questionId: 4b3b9383-b107-4e16-995e-4617d8f9e0f9
     -
       questionId: e24822fb-351d-44e8-9124-ddc0951dfc6c
