--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "preview:projects": "npm run symlinks && ./node_modules/.bin/babel-node scripts/previewProjects",
     "print:projects": "npm run symlinks && ./node_modules/.bin/babel-node scripts/printProjects",
     "print:stats": "npm run symlinks && ./node_modules/.bin/babel-node scripts/printStats",
+    "print:survey": "npm run symlinks && ./node_modules/.bin/babel-node scripts/printSurveyQuestions",
     "queue:empty": "npm run symlinks && ./node_modules/.bin/babel-node scripts/queueEmpty.js",
     "start": "npm run symlinks && npm run icons:fetch && node server",
     "stats": "npm run symlinks && ./node_modules/.bin/babel-node scripts/runStats",
