--- a/db/data/survey-response-instructions.yaml
+++ b/db/data/survey-response-instructions.yaml
@@ -15,8 +15,8 @@ likert7Agreement: |
   - `1` : strongly disagree
   - `2` : disagree
   - `3` : somewhat disagree
-  - `4` : neutral
+  - `4` : neither agree nor disagree
   - `5` : somewhat agree
   - `6` : agree
   - `7` : strongly agree
-  - `0` : not enough information
+  - `0` : don't know (N/A)
