deactivate PROJECT_HOURS question

--- a/db/data/questions.yaml
+++ b/db/data/questions.yaml
@@ -152,7 +152,7 @@
   validationOptions:
     min: 0
   subjectType: project
-  active: true
+  active: false
 -
   id: bbace690-b4c6-435f-a2f8-23bf95c97754
   body: During this past cycle, how many hours of personal time did you take during guild hours?
