fix lint errors
We had to choose between disabling react/prop-types or react/no-unused-prop-types.

Since react/no-unused-prop-types has a bug (see https://github.com/yannickcr/eslint-plugin-react/issues/811), we're disabling it for now.

--- a/package.json
+++ b/package.json
@@ -219,6 +219,7 @@
         "single",
         "avoid-escape"
       ],
+      "react/no-unused-prop-types": 0,
       "react/forbid-component-props": 0,
       "react/jsx-indent": [
         2,
